<resources>
    <string name="app_name">AthenaOnboard</string>
    <string name="start_the_onboarding">Start the onboarding</string>
    <string name="armory">Armory</string>
    <string name="library">Library</string>
    <string name="help">Help</string>
    <string name="to_olympus">To Olympus</string>
    <string name="to_tartarus">To Tartarus</string>
    <string name="to_styx">To Styx</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_shields_available">All shields available</string>


    <string name="lorem_ipsum_muito_pequeno">Lorem</string>
    <string name="lorem_ipsum_pequeno">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_medio">Lorem ipsum dolor sit amet. Eum distinctio distinctio vel alias odit qui galisum alias et delectus optio sed quia provident quod magni. </string>
    <string name="lorem_ipsum_mediano">Lorem ipsum dolor sit amet. Eum distinctio distinctio vel alias odit qui galisum alias et delectus optio sed quia provident quod magni. Qui deleniti suscipit ab consequatur dolores est </string>
    <string name="lorem_ipsum_grande">Lorem ipsum dolor sit amet. Eum distinctio distinctio vel alias odit qui galisum alias et delectus optio sed quia provident quod magni. Qui deleniti suscipit ab consequatur dolores est aliquid quae At dolores perferendis aut animi obcaecati hic reiciendis soluta.</string>


</resources>