<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <!--    first quadrant-->

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/start_the_onboarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_show_popup_armory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/armory"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <ImageView
        android:id="@+id/img_show_popup_theme"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_show_popup_library"
        app:layout_constraintStart_toEndOf="@+id/btn_show_popup_library"
        app:layout_constraintTop_toTopOf="@+id/btn_show_popup_library"
        app:tint="@color/teal_200" />


    <Button
        android:id="@+id/btn_show_popup_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/library"
        app:layout_constraintStart_toStartOf="@+id/txt_title"
        app:layout_constraintTop_toBottomOf="@+id/btn_show_popup_armory" />


    <TextView
        android:id="@+id/txt_quadrant_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/start_the_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_popup_olympus"
        app:layout_constraintStart_toStartOf="parent" />


    <!--    second quadrant-->

    <Button
        android:id="@+id/btn_show_popup_styx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/to_styx"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_popup_tartarus"
        app:layout_constraintStart_toStartOf="@+id/btn_show_popup_tartarus" />

    <Button
        android:id="@+id/btn_show_popup_tartarus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/to_tartarus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    third quadrant-->



    <ImageView
        android:id="@+id/img_show_popup_athena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_popup_help"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/teal_200" />


    <Button
        android:id="@+id/btn_show_popup_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />




    <!--    fourth quadrant-->




    <ImageView
        android:id="@+id/img_show_popup_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="@+id/btn_show_popup_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_show_popup_armory"
        app:tint="@color/teal_200"
        android:background="@color/black"/>


    <ImageView
        android:id="@+id/img_show_popup_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintEnd_toEndOf="@+id/img_show_popup_logo"
        app:layout_constraintTop_toBottomOf="@+id/img_show_popup_logo"
        app:tint="@color/teal_200" />


    <TextView
        android:id="@+id/txt_quadrant_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/start_the_onboarding"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_popup_olympus"
        app:layout_constraintEnd_toEndOf="parent" />





    <Button
        android:id="@+id/btn_show_popup_olympus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_olympus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <include
        android:id="@+id/layout_dim"
        android:visibility="gone"
        layout="@layout/view_dim"/>

</androidx.constraintlayout.widget.ConstraintLayout>